# Online-3D-BPP-PCT

./: .gitignore  attention_model.py  envs.py  kfac.py  main.py  pyproject.toml  tools.py  train_tools.py
pct_envs/PctDiscrete0/: bin3D.py  convex_hull.py
wrapper/: vec_env.py
