[tool.poetry]
name = "online-3d-bpp-pct"
version = "0.1.0"
description = ""
authors = ["Kenji Fukuda <fk.kenji.21@gmail.com>"]
readme = "README.md"
# packages = [{include = "online_3d_bpp_pct"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp38-cp38-linux_x86_64.whl"}
torchaudio = {url = "https://download.pytorch.org/whl/cu118/torchaudio-2.0.0%2Bcu118-cp38-cp38-linux_x86_64.whl"}
# torchvision = {url = "https://download.pytorch.org/whl/cu118/torchvision-2.0.0%2Bcu118-cp38-cp38-linux_x86_64.whl"}
gymnasium = {extras = ["all"], version = "^0.26.3"}
gym = {extras = ["all"], version = "^0.26.2"}
pygame = "2.1.0"
ipykernel = "^6.22.0"
ipython = "^8.11.0"
mypy = "^1.1.1"
tensorboardx = "^2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
